k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: who-goes-to-try-frontend
  namespace: who-goes-to-try
  labels:
    app: who-goes-to-try-frontend
spec:
  selector:
    app: who-goes-to-try-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
