k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: who-goes-to-try-frontend
  namespace: who-goes-to-try
spec:
  ingressClassName: traefik
  rules:
    - host: who-goes-to-try.hackathon.sev-2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: who-goes-to-try-frontend
                port:
                  number: 80
